# sgevalviz

./: README.md  bump_version.sh  development.sh  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-test-pypi.yml
src/sgevalviz/: cli.py  fill_data.py  plot.py  pre_process.py  statistical_analysis.py  utils.py
