[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sgevalviztest"
version = "0.1.10"
description = "An improved version of sgeval with visualization and statistical analysis tools for GTFS bioinformatics data."
authors = [
    { name = "Vinícius Araújo" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

# Permite rodar o comando `sgevalviz` no terminal
[project.scripts]
sgevalviztest = "sgevalviz.cli_test:main_wrapper"

# Metadados opcionais, mas úteis pro PyPI
[project.urls]
Homepage = "https://github.com/AraujoVE/sgevalviz"
Repository = "https://github.com/AraujoVE/sgevalviz"
Issues = "https://github.com/AraujoVE/sgevalviz/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
sgevalviztest = "src/sgevalviz"

[tool.setuptools.package-data]
sgevalviztest = ["configs/*.json"]